--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.google.com/specimen/Barlow+Semi+Condensed);
 *{
-  padding: 0
-  margin: 0
+  padding: 0;
+  margin: 0;
   box-sizing:border-box;
   font-family: 'Barlow Semi Condensed', sans-serif;
 }
@@ -14,13 +14,14 @@ body{
   min-height: 100vh;
   background-color: hsl(210, saturation 46%, lightness 95%);
 }
-testimonials{
+.grid-container{
   display: grid;
   max-width: 1150px;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, min-content);
-  grid-gap: 20px
+  grid-gap: 20px;
 }
+
 .card{
   display: flex;
   flex-direction: column;
@@ -34,14 +35,14 @@ testimonials{
   display: flex;
   align-items: center;
   color: hsl(0, 0%, 80%);
-  margin-bottom: 10px 
+  margin-bottom: 10px;
 }
 
 .card_head img{
   width: 32px;
   height: 32px;
   border-radius: 50%;
-  marin-right: 10px;
+  margin-right: 10px;
   border: 2px solid #fff;
 }
 
@@ -91,7 +92,7 @@ testimonials{
 .card-5{
   grid-row: -1/1;
   grid-column: 4/5;
-  background-color: #fff
+  background-color: #fff;
 }
 
 .card-3 .card_heading,
@@ -103,7 +104,7 @@ testimonials{
   color:#222;
 }
 
-@media (max-width: 1024px){
+@media max-width: 1024px {
   body{
     padding: 20px;
 }
